deploy san website

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ header b {
 
 .logo-s-link {
     float: left;
-    margin: 0 10px 0 20px;
+    margin: 4px 10px 0 20px;
 }
 .logo-s {
     border: 0;
