deploy san website

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ section h4 b {
 .feature-item {
     box-sizing: border-box;
     width: 33%;
-    height: 16rem;
+    height: 17rem;
     float: left;
     padding: 1rem;
 }
@@ -169,6 +169,7 @@ section h4 b {
     letter-spacing: .05rem;
     line-height: 1.6rem;
     color: #999;
+    margin-bottom: 0;
 }
 
 .resource {
