--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ section h4 b {
     padding: 10px;
     position: relative;
     top: 10px;
-    color: #777;
+    color: #ddd;
 }
 
 .feature {
@@ -192,18 +192,19 @@ section h4 b {
 .resource-item:link,
 .resource-item:hover,
 .resource-item:active {
+    background: #334959;
     box-sizing: border-box;
     width: 20rem;
     height: 114px;
     float: left;
     margin: 0 .25rem;
-    border-bottom: 3px solid #f6f2f6;
+    border-bottom: 3px solid #334959;
     text-decoration: none;
     transition: background .1s ease-in; 
 }
 
 .resource-item:hover {
-    background: rgba(255, 255, 255, .05);
+    border-bottom: 3px solid #c8a400;
 }
 
 
@@ -213,10 +214,10 @@ section h4 b {
 
 
 .resource-item h5 {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 300;
     letter-spacing: .1rem;
-    color: #fff;
+    color: #c8a400;
     margin: 15px 0 5px;
     padding-left: .4rem;
 }
@@ -226,23 +227,23 @@ section h4 b {
     font-weight: 300;
     letter-spacing: .05rem;
     line-height: 1.6rem;
-    color: #c6aeb4;
+    color: #fff;
     padding-left: 1.8rem;
 }
 
 .resource-item-unready h5 {
-    color: #aaa;
+    color: #666;
 }
 
 .resource-item-unready,
 .resource-item-unready:hover {
-    border-bottom: 3px solid #aaa;
-    background: none;
+    background: #252c33;
+    border-bottom: 3px solid #252c33;
 }
 
 .resource-item-unready p,
 .resource-item-unready:hover p {
-    color: #909090;
+    color: #666;
 }
 
 footer {
