--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ section h4 b {
     box-sizing: border-box;
     width: 20rem;
     height: 114px;
+    padding: 1rem;
     float: left;
     margin: 0 .25rem;
     border-bottom: 3px solid #334959;
@@ -228,7 +229,7 @@ section h4 b {
     letter-spacing: .05rem;
     line-height: 1.6rem;
     color: #fff;
-    padding-left: 1.8rem;
+    margin: 0;
 }
 
 .resource-item-unready h5 {
