deploy san website

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ section h4 b {
     font-weight: 300;
     letter-spacing: .1rem;
     color: #c8a400;
-    margin: 0 0 .8rem;
+    margin: .7rem 0;
 }
 
 .resource-item p {
