--- a/tutorial/component/index.html
+++ b/tutorial/component/index.html
@@ -99,7 +99,7 @@
     </dl>
 </aside>
 
-<article id="post-component" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/component" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
