--- a/tutorial/component/index.html
+++ b/tutorial/component/index.html
@@ -17,7 +17,7 @@
 组件定义定义组件最基本的方法是，从 san.Component 继承。San 提供了 san.inherits 方法，用于继承。
 12345678910function MyApp(options) &amp;#123;    san.Comp">
 <meta property="og:image" content="http://ecomfe.github.io/../../img/life-cycle.png">
-<meta property="og:updated_time" content="2017-07-13T09:35:17.000Z">
+<meta property="og:updated_time" content="2017-08-08T02:16:47.000Z">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="组件">
 <meta name="twitter:description" content="组件是 San 的基本单位，是独立的数据、逻辑、视图的封装单元。从页面的角度看，组件是 HTML 元素的扩展。从功能模式的角度看，组件是一个 ViewModel。
@@ -198,7 +198,7 @@
 <li><code>raw</code> - 不进行转义。当不想使用 HTML 转义时，使用此过滤器</li>
 </ul>
 <h3 id="定制过滤器"><a href="#定制过滤器" class="headerlink" title="定制过滤器"></a>定制过滤器</h3><p>通过定义组件的 <strong>filters</strong> 成员，可以指定组件的视图模板可以使用哪些过滤器。</p>
-<figure class="highlight javascript"><table><tr><td class="gutter"><pre><div class="line">1</div><div class="line">2</div><div class="line">3</div><div class="line">4</div><div class="line">5</div><div class="line">6</div><div class="line">7</div><div class="line">8</div><div class="line">9</div></pre></td><td class="code"><pre><div class="line">san.defineComponent(&#123;</div><div class="line">    template: <span class="string">'&lt;a&gt;&#123;&#123;createTime | dateFormat('</span>yyyy-MM-dd<span class="string">')&#125;&#125;&lt;/a&gt;'</span>,</div><div class="line"></div><div class="line">    filters: &#123;</div><div class="line">        dateFormat: <span class="function"><span class="keyword">function</span> (<span class="params">value, format</span>) </span>&#123;</div><div class="line">            <span class="keyword">return</span> moment(value).format(format);</div><div class="line">        &#125;</div><div class="line">    &#125;</div><div class="line">&#125;);</div></pre></td></tr></table></figure>
+<figure class="highlight javascript"><table><tr><td class="gutter"><pre><div class="line">1</div><div class="line">2</div><div class="line">3</div><div class="line">4</div><div class="line">5</div><div class="line">6</div><div class="line">7</div><div class="line">8</div><div class="line">9</div></pre></td><td class="code"><pre><div class="line">san.defineComponent(&#123;</div><div class="line">    template: <span class="string">'&lt;a&gt;&#123;&#123;createTime | dateFormat("yyyy-MM-dd")&#125;&#125;&lt;/a&gt;'</span>,</div><div class="line"></div><div class="line">    filters: &#123;</div><div class="line">        dateFormat: <span class="function"><span class="keyword">function</span> (<span class="params">value, format</span>) </span>&#123;</div><div class="line">            <span class="keyword">return</span> moment(value).format(format);</div><div class="line">        &#125;</div><div class="line">    &#125;</div><div class="line">&#125;);</div></pre></td></tr></table></figure>
 <p>过滤器函数的第一个参数是表达式对应的数据值，过滤器调用时传入的参数从第二个参数开始接在后面。</p>
 <p><code>注意</code>：考虑到组件的独立性，San 没有提供全局过滤器注册的方法，组件要使用的过滤器必须在自身的 <strong>filters</strong> 中定义。</p>
 <h2 id="组件层级"><a href="#组件层级" class="headerlink" title="组件层级"></a>组件层级</h2><p>我们知道组件体系下，组件必须是可嵌套的树形关系。下面从一段代码，做一些说明。在下面的代码中，AddForm 内部使用了两个自定义组件：ui-calendar 和 ui-timepicker。</p>
@@ -282,9 +282,9 @@
             <h5>Update</h5>
             <p>Immutable的对象更新库，和san-store配合进行应用状态数据更新。</p>
         </a>
-        <a class="facility-item facility-item-unready">
-            <h5>组件库</h5>
-            <p>一些组件库正在开发，可预期至少会有material design组件库。</p>
+        <a class="facility-item" href="https://github.com/ecomfe/san-mui" target="_blank">
+            <h5>MaterialUI组件库</h5>
+            <p>基于material-design设计规范的组件库</p>
         </a>
     </div>
 </section>
@@ -306,5 +306,6 @@
         &copy; 2017 <a target="_blank" href="http://efe.baidu.com">Baidu EFE</a>
     </div>
 </footer>
+
 </body>
 </html>
